--- a/src/components/MenuFirstLevel/DeployHidden/DeployHidden.module.scss
+++ b/src/components/MenuFirstLevel/DeployHidden/DeployHidden.module.scss
@@ -7,22 +7,22 @@
 .dotsBlockParent {
   position: relative;
 }
-.dotsBlock::after {
-  content: '';
-  border-left: 9px solid transparent;
-  border-right: 9px solid transparent;
-  border-bottom: 11px solid white;
-  position: absolute;
-  margin: 9 auto;
-  top: 62px;
-  left: 29px;
-  opacity: 0;
-  transition: all 0.5s;
-}
-.dotsBlock:hover::after {
-  opacity: 1;
-  transition-delay: 0.1s;
-}
+// .dotsBlock::after {
+//   content: '';
+//   border-left: 9px solid transparent;
+//   border-right: 9px solid transparent;
+//   border-bottom: 11px solid white;
+//   position: absolute;
+//   margin: 9 auto;
+//   top: 62px;
+//   left: 29px;
+//   opacity: 0;
+//   transition: all 0.5s;
+// }
+// .dotsBlock:hover::after {
+//   opacity: 1;
+//   transition-delay: 0.1s;
+// }
 .dotsBlock__dot {
   height: 7px;
   width: 7px;
