--- a/src/components/MenuFirstLevel/DeployHidden/DeployHidden.module.scss
+++ b/src/components/MenuFirstLevel/DeployHidden/DeployHidden.module.scss
@@ -1,39 +1,29 @@
-.dotsBlock {
-  display: flex;
-  padding: 31px 22px 31px 22px;
-  border-left: 1px solid rgba(0, 0, 0, 0.1); 
-  border-right: 1px solid rgba(0, 0, 0, 0.1);
-}
+$border: 1px solid rgba(0, 0, 0, 0.1); 
+
 .dotsBlockParent {
   position: relative;
+
+  .dotsBlock {
+    display: flex;
+    padding: 31px 22px 31px 22px;
+    border-left: $border; 
+    border-right: $border;
+
+    .dotsBlock__dot {
+      height: 7px;
+      width: 7px;
+      border-radius: 50%;
+      background-color: #144F7F;
+
+      &:first-child {
+        margin-right: 4px;
+      }
+      &:last-child {
+        margin-left: 4px;
+      }
+    }
+  }
 }
-// .dotsBlock::after {
-//   content: '';
-//   border-left: 9px solid transparent;
-//   border-right: 9px solid transparent;
-//   border-bottom: 11px solid white;
-//   position: absolute;
-//   margin: 9 auto;
-//   top: 62px;
-//   left: 29px;
-//   opacity: 0;
-//   transition: all 0.5s;
-// }
-// .dotsBlock:hover::after {
-//   opacity: 1;
-//   transition-delay: 0.1s;
-// }
-.dotsBlock__dot {
-  height: 7px;
-  width: 7px;
-  border-radius: 50%;
-  background-color: #144F7F;
-}
-.dotsBlock__dot:first-child {
-  margin-right: 4px;
-}
-.dotsBlock__dot:last-child {
-  margin-left: 4px;
-}
+
 
 
