--- a/src/components/MenuSecondLevel/dropDown/dropdown.scss
+++ b/src/components/MenuSecondLevel/dropDown/dropdown.scss
@@ -93,6 +93,10 @@ $shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
     color: #000000;
     height: 25px;
   }
+  .ant-menu-item > a:hover {
+    color: #144F7F;
+    text-decoration: underline;
+  }
   .ant-menu-vertical {
     border: none;
   }
@@ -102,4 +106,3 @@ $shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
     padding: 15px;
   }
 }
-
