--- a/src/components/MenuSecondLevel/dropDown/dropdown.scss
+++ b/src/components/MenuSecondLevel/dropDown/dropdown.scss
@@ -15,6 +15,13 @@ $shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
       padding-top: 10px;
       padding-left: 14px;
       padding-right: 51px;
+
+      @media screen and (max-width: 320px) {
+        padding-right: 20px;
+        padding-top: 4px;
+        padding-left: 5px;
+
+      }
     }
     .ant-dropdown-menu-item img {
       padding-right: 36px;
