--- a/src/components/MenuFirstLevel/MenuFirstLevel.module.scss
+++ b/src/components/MenuFirstLevel/MenuFirstLevel.module.scss
@@ -42,22 +42,25 @@ $border: 1px solid rgba(0, 0, 0, 0.1);
     min-width: 232px;
   }
 
-  .menuItem__title_grey {
-    @include flex();
-    color: #A8A8A8;
-    padding-left: 12px;
-    flex-direction: column;
+  .menuItem {
+
+    &__title_grey {
+      @include flex();
+      color: #A8A8A8;
+      padding-left: 12px;
+      flex-direction: column;
+    }
+    &__title_blue {
+      @include flex();
+      color: #123653;
+      padding-left: 12px;
+      flex-direction: column;
+    }
+    &__title_white {
+      @include flex();
+      padding-left: 12px;
+      flex-direction: column;
+    }  
   }
-  .menuItem__title_blue {
-    @include flex();
-    color: #123653;
-    padding-left: 12px;
-    flex-direction: column;
-  }
-  .menuItem__title_white {
-    @include flex();
-    padding-left: 12px;
-    flex-direction: column;
-  }  
 }
 
