--- a/src/components/MenuSecondLevel/MenuSecondLevel.module.scss
+++ b/src/components/MenuSecondLevel/MenuSecondLevel.module.scss
@@ -20,6 +20,7 @@ $border: 1px solid rgba(255, 255, 255, 0.15);
       text-transform: uppercase;
       color: #123653;
       line-height: 15px;
+      cursor: default;
     }
   }
   .menuItem_gas {
@@ -51,6 +52,7 @@ $border: 1px solid rgba(255, 255, 255, 0.15);
     box-sizing: border-box;
     font-size: 12px;
     line-height: 15px;
+    cursor: default;
 
     .menuItem__title_chemists {
       @include flex();
