--- a/src/components/MenuSecondLevel/dropDown/dropdown.scss
+++ b/src/components/MenuSecondLevel/dropDown/dropdown.scss
@@ -20,7 +20,6 @@ $shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
         padding-right: 20px;
         padding-top: 4px;
         padding-left: 5px;
-
       }
     }
     .ant-dropdown-menu-item img {
@@ -50,10 +49,13 @@ $shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
     border-bottom: 11px solid white;
     position: absolute;
     top: -8px;
-    left: 70px;
+    left: 85px;
 
       @media screen and (max-width: 705px) {
         left: 250px;
+      }
+      @media screen and (max-width: 460px) {
+        display: none;
       }
   }
 }
@@ -65,7 +67,7 @@ $shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
     border-bottom: 11px solid white;
     position: absolute;
     top: -8px;
-    left: 70px;
+    left: 80px;
   }
 }
 .alkalis {
